Schema/data model update for RP custom action listRecipes
